<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".news.AddNewsActivity">

    <Button
        android:id="@+id/addItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_news_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:importantForAccessibility="yes"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/addItems"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/content_hint"
        android:importantForAccessibility="yes"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/titleEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        app:layout_constraintTop_toBottomOf="@id/contentEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/selectedImageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
    android:contentDescription="@string/image_preview"
    app:layout_constraintTop_toBottomOf="@id/selectImageButton"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
